--- a/app/scripts/views/container/main.html
+++ b/app/scripts/views/container/main.html
@@ -1,7 +1,7 @@
 <div>
     <nav class="navbar topnav-navbar navbar-fixed-top" role="navigation">
         <div class="navbar-header text-center">
-            <a class="navbar-brand">HJM</a>
+            <a class="navbar-brand">Aha</a>
         </div>
         <div class="collapse navbar-collapse">
             <!--<form class="navbar-form navbar-left ng-pristine ng-valid" role="search"><span-->
