--- a/app/scripts/views/biz/orders/update.html
+++ b/app/scripts/views/biz/orders/update.html
@@ -32,6 +32,8 @@
                         <div form-input text="参团ID" ng-model="param.groupbuy_id" required="true"
                              ng-if="param.apply_mode==2"></div>
 
+                        <div form-input text="马甲数最大值" ng-model="count" required="true" form-show-role="admin"></div>
+
                         <div form-textarea text="用户ID" ng-model="user_ids" required="true"
                              data-placeholder="用户ID,英文逗号隔开填写多个成一行,或者每行写一个不要逗号"></div>
                     </div>
