--- a/app/scripts/views/biz/act/update.html
+++ b/app/scripts/views/biz/act/update.html
@@ -34,7 +34,7 @@
                 <div class="panel panel-primary">
                     <div class="panel-body" ng-click="title_info[0] = title_info[0]+1; ">
                         <h5 style="margin: 0; padding: 10px 0;">活动信息
-                            <i class="animate-switch fa pull-right"
+                            <i class="animate-switch fa pull-right text-primary"
                                ng-class="{'fa-angle-double-up':title_info[0]%2==1,'fa-angle-double-down':title_info[0]%2==0}"></i>
                         </h5>
                     </div>
@@ -131,7 +131,7 @@
                 <div class="panel panel-primary">
                     <div class="panel-body">
                         <h5 style="margin: 0; padding: 10px 0;" ng-click="title_info[1] = title_info[1]+1; ">活动地址
-                            <i class="animate-switch fa pull-right"
+                            <i class="animate-switch fa pull-right text-primary"
                                ng-class="{'fa-angle-double-up':title_info[1]%2==1,'fa-angle-double-down':title_info[1]%2==0}"></i>
                         </h5>
                     </div>
@@ -142,7 +142,7 @@
                 <div class="panel panel-primary">
                     <div class="panel-body">
                         <h5 style="margin: 0; padding: 10px 0;" ng-click="title_info[2] = title_info[2]+1; ">活动规则
-                            <i class="animate-switch fa pull-right"
+                            <i class="animate-switch fa pull-right text-primary"
                                ng-class="{'fa-angle-double-up':title_info[2]%2==1,'fa-angle-double-down':title_info[2]%2==0}"></i>
                         </h5>
                     </div>
@@ -237,7 +237,7 @@
                 <div class="panel panel-primary">
                     <div class="panel-body">
                         <h5 style="margin: 0; padding: 10px 0;" ng-click="title_info[3] = title_info[3]+1; ">优惠规则
-                            <i class="animate-switch fa pull-right"
+                            <i class="animate-switch fa pull-right text-primary"
                                ng-class="{'fa-angle-double-up':title_info[3]%2==1,'fa-angle-double-down':title_info[3]%2==0}"></i>
                         </h5>
                     </div>
@@ -296,7 +296,7 @@
                 <div class="panel panel-primary">
                     <div class="panel-body">
                         <h5 style="margin: 0; padding: 10px 0;" ng-click="title_info[4] = title_info[4]+1; ">活动详情
-                            <i class="animate-switch fa pull-right"
+                            <i class="animate-switch fa pull-right text-primary"
                                ng-class="{'fa-angle-double-up':title_info[4]%2==1,'fa-angle-double-down':title_info[4]%2==0}"></i>
                         </h5>
                     </div>
@@ -316,7 +316,7 @@
                 <div class="panel panel-primary">
                     <div class="panel-body">
                         <h5 style="margin: 0; padding: 10px 0;" ng-click="title_info[5] = title_info[5]+1; ">礼包详情
-                            <i class="animate-switch fa pull-right"
+                            <i class="animate-switch fa pull-right text-primary"
                                ng-class="{'fa-angle-double-up':title_info[5]%2==1,'fa-angle-double-down':title_info[5]%2==0}"></i>
                         </h5>
                     </div>
@@ -416,7 +416,7 @@
                 <div class="panel panel-primary">
                     <div class="panel-body">
                         <h5 style="margin: 0; padding: 10px 0;" ng-click="title_info[6] = title_info[6]+1; ">显示管理
-                            <i class="animate-switch fa pull-right"
+                            <i class="animate-switch fa pull-right text-primary"
                                ng-class="{'fa-angle-double-up':title_info[6]%2==1,'fa-angle-double-down':title_info[6]%2==0}"></i>
                         </h5>
                     </div>
