--- a/app/scripts/views/biz/record_rooms/update.html
+++ b/app/scripts/views/biz/record_rooms/update.html
@@ -6,8 +6,8 @@
     </style>
     <div class="panel panel-primary">
         <div class="panel-heading">
-            <h3 class="panel-title inlineBlock" ng-if="!$stateParams.id">新增直播</h3>
-            <h3 class="panel-title inlineBlock" ng-if="$stateParams.id">修改直播</h3>
+            <h3 class="panel-title inlineBlock" ng-if="!$stateParams.id">新增视频</h3>
+            <h3 class="panel-title inlineBlock" ng-if="$stateParams.id">修改视频</h3>
         </div>
         <div class="panel-body">
             <!--<simditor ng-model="content" config="simditorConfig"></simditor>-->
@@ -15,18 +15,33 @@
                   disabled-role="{{$stateParams.product_id?'admin,op':''}}">
                 <div class="panel panel-primary">
                     <div class="panel-body">
-                        <h5 style="margin: 0; padding: 10px 0;">直播信息</h5>
+                        <h5 style="margin: 0; padding: 10px 0;">视频信息</h5>
                     </div>
                     <div class="panel-body">
 
-                        <div form-input text="直播ID" ng-model="param.id" ng-show="$stateParams.id"
-                             placeholder="直播ID" ng-disabled="$stateParams.id"></div>
+                        <div form-input text="视频ID" ng-model="param.id" ng-show="$stateParams.id"
+                             placeholder="视频ID" ng-disabled="$stateParams.id"></div>
 
-                        <div form-input text="直播标题" ng-model="param.title" placeholder="直播标题,不超过30个字" required="true"
+                        <div form-input text="视频标题" ng-model="param.title" placeholder="视频标题,不超过30个字" required="true"
                              minlength="1" maxlength="30"></div>
 
+                        <div form-input text="SKU" ng-model="param.sku" placeholder="填写数字" required="true"></div>
+                        <div form-input text="分享URl" ng-model="param.share_url" placeholder="分享URl" required="true"></div>
 
-                        <div form-image text="直播图片" ng-model="pic" max="1"></div>
+
+                        <div form-image text="视频图片" ng-model="pic" max="1"></div>
+                        <div form-date-time text="视频发布时间" ng-model="param.record.publish_at" required="true"></div>
+
+                        <div form-input text="视频标题" ng-model="param.record.video_title" placeholder="视频标题"
+                             required="true"></div>
+                        <div form-input text="视频来源" ng-model="param.record.video_url" placeholder="视频来源"
+                             required="true"></div>
+                        <div form-input text="视频宽度" ng-model="param.record.video_width" placeholder="视频宽度"
+                             required="true"></div>
+                        <div form-input text="视频高度" ng-model="param.record.video_height" placeholder="视频高度"
+                             required="true"></div>
+                        <div form-input text="视频时长" ng-model="param.record.video_duration" placeholder="视频时长"
+                             required="true"></div>
                     </div>
                 </div>
 
