--- a/app/scripts/views/biz/act/update.html
+++ b/app/scripts/views/biz/act/update.html
@@ -303,6 +303,8 @@
                     <div class="panel-body" ng-show="title_info[4]%2==1">
                         <div form-input text="音频媒体标题" ng-model="param.media_title" placeholder="音频媒体标题,不超过30个字"
                              minlength="0" maxlength="30"></div>
+                        <h5>腾讯视频播放界面的分享中有个复制通用代码,把代码中src的内容复制到这里。</h5>
+                        <h5>例如:https://imgcache.qq.com/tencentvideo_v1/playerv3/TPout.swf?max_age=86400&v=20161117&vid=q0522r5taby&auto=0</h5>
                         <div form-input text="视频音频媒体地址" ng-model="param.video_url"
                              placeholder="音频是http开头;视频是https开头"></div>
                         <div form-radio text="详情类型" ng-model="param.content_type" default="2"
