--- a/app/scripts/views/biz/record_rooms/update.html
+++ b/app/scripts/views/biz/record_rooms/update.html
@@ -42,6 +42,7 @@
                              required="true"></div>
                         <div form-input text="视频时长" ng-model="param.record.video_duration" placeholder="视频时长"
                              required="true"></div>
+                        <div form-input text="排序" ng-model="param.order_by" placeholder="排序" type="number" min="0" required="true"></div>
                     </div>
                 </div>
 
